--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "schirinos/nutrient-db",
+    "name": "dramos/nutrient-db",
     "type": "library",
     "description": "A program to convert USDA nutrient database into various formats",
     "keywords": ["USDA", "nutrient"],
